--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         var cubeSize = edgeSize + (edgeSize - 1) * padding;
         var halfCubeSize = cubeSize/2;
 
-        var BACKGROUND_COLOR = 0x6200ee, BODY_COLOR = 0x388e3c, HEAD_COLOR = 0x004D40, score = 0;
+         var BACKGROUND_COLOR = new THREE.Color( 'skyblue' ), BODY_COLOR = 0xADD8E6, HEAD_COLOR =  0x00008B, score = 0;
 
         var lightPos = [new THREE.Vector3(0,50,20), new THREE.Vector3(0,15,-20), new THREE.Vector3(-20,15,20), new THREE.Vector3(20,-15,0)];
 
